<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_question"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:background="@color/colorPrimary">


        <Button
            android:id="@+id/btn_study"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/btn_study" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="90">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_question"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/rv_row_question" />

        <include layout="@layout/fab_category"
            android:contentDescription="@string/fab_content_description_question_answer"/>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5">

        <include layout="@layout/admob"
            />

    </FrameLayout>


</android.support.v7.widget.LinearLayoutCompat>